<resources>
    <string name="app_name">小道文章</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_home_page">小道文章</string>
    <string name="title_activity_dynamic">小道文章</string>
    <string name="title_activity_my_friends">我的好友</string>
    <string name="title_activity_my_collect">我的收藏</string>

    <string name="personal_name">昵称</string>
    <string name="personal_head_photo">头像</string>
    <string name="personal_sex">性别</string>
    <string name="personal_birthday">生日</string>
    <string name="personal_location">地区</string>
    <string name="personal_saying">签名</string>
    <string name="personal_email">邮箱</string>
    <string name="personal_blog_address">博客</string>
    <string name="personal_qq_number">QQ</string>
    <string name="personal_update_head_photo">点击更改个人头像></string>
    <string name="personal_username">用户名</string>
    <string name="personal_sex_example">男</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="signin">登陆</string>
    <string name="signup">还没有账号？点击注册</string>
    <string name="sign_up">注册</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_head_photo">HeadPhotoActivity</string>

    <string name="title_activity_frame_layout_aty">FrameLayoutAty</string>
    <string name="article_title"></string>
    <string name="article_source"></string>
    <string name="article_tag"></string>
    <string name="article_body"></string>
</resources>
