<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_below="@id/article_toolbar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_frame_layout_aty"
    tools:context="com.test.helloworld.FrameLayoutAty">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/article_title_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/article_title"

                android:id="@+id/article_title"
                android:lineSpacingMultiplier="1.2"
                android:textSize="25sp"
                android:textIsSelectable="true" />
            <View
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>
    +
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090"
            android:layout_below="@+id/article_title_wrapper"
            android:layout_marginTop="10dp"
            android:id="@+id/split_line_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="来源:"
            android:id="@+id/textView_source"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textIsSelectable="true"
            android:layout_below="@+id/split_line_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/article_source"
            android:id="@+id/article_source"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/split_line_1"
            android:layout_toRightOf="@+id/textView_source"
            android:layout_toEndOf="@+id/textView_source" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/article_tag"
            android:id="@+id/article_tag"
            android:background="@drawable/tag_style"
            android:layout_below="@+id/split_line_1"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@+id/article_source"
            android:layout_toEndOf="@+id/article_source" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/img_wrapper"
            android:layout_below="@id/textView_source">
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/article_img"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/article_body_wrapper"
            android:layout_below="@id/img_wrapper"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/article_body"
                android:lineSpacingMultiplier="1.05"
                android:id="@+id/article_body"
                android:textSize="18sp"/>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_wrap_1"
            android:layout_below="@id/article_body_wrapper"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="点赞"
                android:id="@+id/button_upvote"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_collect"
                android:text="收藏"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="评论"
            android:textSize="18sp"
            android:id="@+id/title_comment"
            android:layout_below="@id/button_wrap_1"/>
        <EditText
            android:id="@+id/input_comment"
            android:layout_below="@id/title_comment"
            android:layout_marginTop="5dp"
            android:background="@drawable/et"
            android:gravity="left|top"
            android:hint="说点什么吧......"
            android:layout_width="fill_parent"
            android:layout_height="120sp" />
        <LinearLayout
            android:id="@+id/button_wrap_submitcom"
            android:gravity="end"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:layout_below="@id/input_comment"
            android:layout_marginTop="15dp">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"></View>
            <Button
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:text="发表评论"
                android:textSize="18sp"
                android:background="@drawable/button_backgroud_1"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/button_comment"/>
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090"
            android:layout_below="@+id/button_wrap_submitcom"
            android:layout_marginTop="15dp"
            android:id="@+id/split_line_2" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_below="@id/split_line_2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/commentlist"
                android:layout_width="fill_parent"
                android:listSelector="#00000000"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
